// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeuCheckbox.05 checkedValue 1`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label5
  </span>
</label>
`;

exports[`SeuCheckbox.05 checkedValue 2`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox is-checked"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input is-checked"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label5
  </span>
</label>
`;

exports[`SeuCheckbox.05 checkedValue 3`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label5
  </span>
</label>
`;

exports[`SeuCheckbox.05 checkedValue 4`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox is-checked"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input is-checked"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label5
  </span>
</label>
`;

exports[`SeuCheckbox.05 checkedValue 5`] = `
<label
  aria-controls="false"
  aria-disabled="false"
  class="seu-checkbox"
  role="checkbox"
>
  <input
    aria-hidden="false"
    class="seu-checkbox__original"
    type="checkbox"
    value=""
  />
   
  <span
    class="seu-checkbox__input"
  >
    <span
      class="seu-checkbox__inner"
    />
  </span>
   
  <span
    class="seu-checkbox__label"
  >
    label5
  </span>
</label>
`;
